Map on products and categories then view product details

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -1,5 +1,10 @@
 {
     "welcome": "مرحبا فى الرياكت",
-    "home":"الرئيسية",
-    "about":"عنا"
+    "home": "الرئيسية",
+    "about": "عنا",
+    "products": "المنتجات",
+    "view_product_details": "رؤية المزيد",
+    "brand_name": "اسم الماركة",
+    "price": "السعر",
+    "categories":"الأصناف"
 }
