--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -6,5 +6,8 @@
     "view_product_details": "View product details",
     "brand_name": "Brand name",
     "price": "Price",
-    "categories" :"Categories"
+    "categories" :"Categories",
+    "cart":"Cart",
+    "nOfProducts":"Number of products",
+    "add_in_cart":"Add in cart"
 }
